new class for movie title

--- a/src/Components/Body/Movies/CSS/about.module.css
+++ b/src/Components/Body/Movies/CSS/about.module.css
@@ -19,6 +19,11 @@
     margin-top           : var(--card-margin-top);
 }
 
+.MovieTitle {
+    margin    : auto;
+    text-align: center;
+}
+
 .title {
     margin: 0;
 }
