--- a/src/Components/Body/Movies/CSS/movie.module.css
+++ b/src/Components/Body/Movies/CSS/movie.module.css
@@ -1,8 +1,9 @@
 .movieContainer {
-    border      : 1px solid red;
+    border      : 1px solid rgb(135, 140, 158);
     margin-top  : 20px;
     margin-left : 10px;
     margin-right: 10px;
+    background-color: white;
 }
 
 .movieDisplay {
@@ -17,3 +18,4 @@
 p {
     text-align: center;
 }
+
