--- a/src/Components/Movies/css/movie.module.css
+++ b/src/Components/Movies/css/movie.module.css
@@ -1,9 +1,10 @@
 .movieContainer {
-    border      : 1px solid rgb(135, 140, 158);
-    margin-top  : 20px;
-    margin-left : 10px;
-    margin-right: 10px;
-    background-color: white;
+    border             : 1px solid rgb(135, 140, 158);
+    margin-top         : 20px;
+    margin-left        : 10px;
+    margin-right       : 10px;
+    /* background-color: white; */
+    background-color   : rgb(180, 186, 210);
 }
 
 .movieDisplay {
@@ -18,4 +19,3 @@
 p {
     text-align: center;
 }
-
