--- a/src/Components/Movies/css/movies.module.css
+++ b/src/Components/Movies/css/movies.module.css
@@ -11,7 +11,8 @@
 }
 
 .title {
-    color     : white;
-    text-align: center;
-    margin-top: 15px;
+    color         : white;
+    text-align    : center;
+    margin-top    : 15px;
+    text-transform: capitalize;
 }
