--- a/src/Components/Header/css/navBar.module.css
+++ b/src/Components/Header/css/navBar.module.css
@@ -2,4 +2,5 @@
     text-decoration: none;
     color          : rgba(255, 255, 255, .55);
     padding-top    : 8px;
+    margin-right   : 15px;
 }
