--- a/src/Components/Movies/css/movies.module.css
+++ b/src/Components/Movies/css/movies.module.css
@@ -16,3 +16,12 @@
     margin-top    : 15px;
     text-transform: capitalize;
 }
+
+
+@media (min-width: 900px) {
+    .moviesContainer {
+        display              : grid;
+        grid-template-columns: 1fr 1fr 1fr;
+
+    }
+}
