--- a/src/Components/Movies/css/movie.module.css
+++ b/src/Components/Movies/css/movie.module.css
@@ -5,17 +5,61 @@
     margin-right       : 10px;
     /* background-color: white; */
     background-color   : rgb(180, 186, 210);
+
+
+    /* transform:
+        perspective(75em) rotateX(18deg);
+    box-shadow:
+        rgba(22, 31, 39, 0.42) 0px 60px 123px -25px,
+        rgba(19, 26, 32, 0.08) 0px 35px 75px -35px;
+    border-radius: 10px;
+    border       : 1px solid;
+    border-color :
+        rgb(213, 220, 226) rgb(213, 220, 226) rgb(184, 194, 204); */
+
+    border-radius: 20px;
+    border       : 5px solid #e6e6e6;
+    box-shadow   : 0 70px 40px -20px rgba(0, 0, 0, 0.2);
 }
+
+
+/* .movieDisplay {
+    display: flex;
+} */
 
 .movieDisplay {
-    display: flex;
+    display              : grid;
+    grid-template-columns: 1.5fr 2fr 0.1fr;
 }
 
-.movieMain {
+/* here */
+.movieDisplay a {
+    grid-row-start: 1;
+    grid-row-end  : 3;
+}
+
+.movieDisplay img {
+    /* height       : 170px; */
+    border-radius: 14px;
+    width        : 85%;
+}
+
+/* .movieMain {
     margin: auto;
+} */
+.movieMain {
+    padding-top: 30px;
 }
 
 .movieMain h4,
 p {
-    text-align: center;
+    text-align  : center;
+    padding-left: 6px;
+}
+
+.rating {
+    grid-row-start: 2;
+    text-align    : end;
+    margin-bottom : 0;
+    align-self    : center;
 }
