--- a/src/Components/Header/css/menu.module.css
+++ b/src/Components/Header/css/menu.module.css
@@ -1,3 +1,18 @@
+.menuContainer {
+    display         : flex;
+    background-color: rgb(180, 186, 210);
+}
+
+.menuContainer button {
+    background-color: rgb(180, 186, 210);
+    border          : none;
+}
+
+.menuContainer h1 {
+    width     : 100%;
+    text-align: center;
+}
+
 .genres {
     position  : absolute;
     inset     : 0px auto auto 0px;
@@ -26,5 +41,5 @@
 .navLink {
     text-decoration: none;
     margin-right   : 15px;
-    padding: 13px 12px;
+    padding        : 13px 12px;
 }
