--- a/src/Components/Movies/css/movies.module.css
+++ b/src/Components/Movies/css/movies.module.css
@@ -1,7 +1,6 @@
 .mainContainer {
-    max-width  : 900px;
-    margin     : auto;
-    padding-top: 70px;
+    max-width: 900px;
+    margin   : auto;
 }
 
 .search {
@@ -20,6 +19,30 @@
 .dates {
     text-align: center;
     color     : lightgray;
+}
+
+.pageContainer {
+    display         : flex;
+    justify-content : space-evenly;
+    margin-top      : 30px;
+    margin-bottom      : 20px;
+    background-color: rgb(55, 58, 71);
+}
+
+.selectedPage {
+    background-color: rgb(180, 186, 210);
+    padding         : 0.375rem 0.75rem;
+    border          : none;
+    margin          : 0.5px;
+}
+
+.pages {
+    padding         : 0.375rem 0.75rem;
+    border-radius   : 0px;
+    border          : none;
+    margin          : 0.5px;
+    background-color: rgb(55, 58, 71);
+    color           : white;
 }
 
 
