--- a/src/Components/Movies/css/movies.module.css
+++ b/src/Components/Movies/css/movies.module.css
@@ -25,7 +25,7 @@
     display         : flex;
     justify-content : space-evenly;
     margin-top      : 30px;
-    margin-bottom      : 20px;
+    margin-bottom   : 20px;
     background-color: rgb(55, 58, 71);
 }
 
@@ -45,6 +45,10 @@
     color           : white;
 }
 
+.pages:hover {
+    background-color: rgb(180, 186, 210);
+    color           : rgb(55, 58, 71)
+}
 
 @media (min-width: 900px) {
     .moviesContainer {
