--- a/src/Components/Movies/css/about.module.css
+++ b/src/Components/Movies/css/about.module.css
@@ -26,39 +26,29 @@
     background-color: rgb(55, 58, 71);
     color           : white;
     width           : var(--poster-width);
-    padding-bottom: 4px;
+    padding-bottom  : 4px;
 }
 
 .rating img {
     padding-bottom: 4px;
 }
 
-.card {
-    /* display              : grid;
-    grid-template-columns: 1fr 1fr 3fr 2fr;
-    border               : 1px solid rgba(0, 0, 0, .125);
-    border-radius        : .25rem;
-    margin-top           : var(--card-margin-top);
-    background-color     : var(--main-background-color); */
+.generalInfo {
+    grid-column: 1 / 3;
 
-
-    grid-column-start    : 1;
-    grid-column-end      : 3;
     display              : grid;
     grid-template-columns: 1fr 1fr 1fr;
     padding-top          : 20px;
     padding-bottom       : 10px;
 }
 
-.card p {
-    align-self    : center;
-    margin-bottom : 0;
-    padding-bottom: 5px;
+.generalInfo p {
+    margin-bottom: 0px;
 }
 
-.card h6 {
-    margin-bottom: 0;
-    justify-self : center;
+.generalInfo h6 {
+    margin-bottom: 0px;
+  
 }
 
 .MovieTitle {
@@ -90,45 +80,41 @@
     grid-template-columns: 1fr 2fr;
     border               : 1px solid rgba(0, 0, 0, .125);
     border-radius        : .25rem;
+    padding-top          : 15px;
     margin-top           : var(--card-margin-top);
     background-color     : var(--main-background-color);
 }
 
 .statusTitle {
-    /* margin-left: 10px; */
-    text-align   : center;
-    align-self   : center;
-    padding-top  : 20px;
-    margin-bottom: 0px;
-}
-
-.movieStatus {
-    justify-self: start;
+    place-self: center;
 }
 
 .genresTitle {
-    justify-self  : center;
-    align-self    : center;
-    margin-bottom : 0px;
-    padding-top   : 20px;
-    padding-bottom: 10px;
-
+    place-self: center;
 }
+
+
+.movieStatus {
+    padding-left : 0px;
+    margin-bottom: .5rem;
+    place-self   : center;
+    justify-self : start;
+    font-style   : italic;
+}
+
 
 .genres {
     list-style     : none;
     display        : flex;
     flex-wrap      : wrap;
     justify-content: flex-start;
-
-    padding-left  : 0px;
-    align-self    : center;
-    margin-bottom : 0;
-    padding-top   : 20px;
-    padding-bottom: 10px;
+    padding-left   : 0px;
+    margin-bottom  : .5rem;
+    place-self     : center;
+    justify-self   : start;
 }
 
+
 .genres li {
-    /* width       : 28%; */
     margin-right: 10px;
 }
