fixed issue with links going over container

--- a/src/Components/Movies/css/about.module.css
+++ b/src/Components/Movies/css/about.module.css
@@ -138,6 +138,7 @@
     text-align     : center;
     padding-bottom : 10px;
     text-decoration: none;
+    overflow       : auto;
 }
 
 @media (max-width: 360px) {
