--- a/src/Components/Header/css/header.module.css
+++ b/src/Components/Header/css/header.module.css
@@ -3,7 +3,7 @@
     justify-content : space-evenly;
     list-style      : none;
     padding         : 0%;
-    background-color: #313131f0;
+    background-color: rgba(48, 48, 48, 0.941);
     height          : 50px;
 }
 
@@ -14,7 +14,7 @@
 .header a {
     text-decoration: none;
     font-size      : 20px;
-    color          : #a4a1a1;
+    color          : rgb(164,161,161) ;
     margin: auto;
 }
 
