--- a/src/Components/Movies/css/movie.module.css
+++ b/src/Components/Movies/css/movie.module.css
@@ -6,7 +6,7 @@
     /* background-color: white; */
     background-color   : rgb(180, 186, 210);
     border-radius: 20px;
-    border       : 5px solid #e6e6e6;
+    border       : 5px solid rgb(230, 230, 230);
     box-shadow   : 0 70px 40px -20px rgba(0, 0, 0, 0.2);
 }
 
