changed columns from 3 to 2

--- a/src/Components/Movies/css/movies.module.css
+++ b/src/Components/Movies/css/movies.module.css
@@ -53,7 +53,7 @@
 @media (min-width: 900px) {
     .moviesContainer {
         display              : grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
 
     }
 }
