--- a/src/Components/Movies/css/media.module.css
+++ b/src/Components/Movies/css/media.module.css
@@ -1,19 +1,31 @@
+/* 
 .mediaContainer {
     border             : 1px solid rgb(135, 140, 158);
     margin-top         : 20px;
     margin-left        : 10px;
     margin-right       : 10px;
-    /* background-color: white; */
     background-color   : rgb(180, 186, 210);
     border-radius: 20px;
     border       : 5px solid rgb(230, 230, 230);
     box-shadow   : 0 70px 40px -20px rgba(0, 0, 0, 0.2);
+} */
+
+.mediaContainer {
+    border       : 1px solid rgb(135, 140, 158);
+    margin-top   : 20px;
+    margin-left  : 10px;
+    margin-right : 10px;
+    box-shadow   : 0px 5px 8px 3px rgb(0 0 0 / 55%);
+    border-radius: 10px
 }
+
 
 
 .mediaDisplay {
     display              : grid;
     grid-template-columns: 1fr 2fr 0.1fr;
+    background           : #000000;
+    border-radius        : 10px;
 }
 
 .mediaDisplay a {
@@ -22,12 +34,16 @@
 }
 
 .mediaDisplay img {
-    border-radius: 14px;
-    width        : 85%;
+    /* border-radius: 14px;
+    width        : 85%; */
+    width        : 100%;
+    height       : auto;
+    border-radius: 10px 0 0 10px;
 }
 
 .mediaMain {
     padding-top: 30px;
+    color      : white;
 }
 
 .mediaMain h6,
@@ -44,4 +60,5 @@ p {
     color         : rgba(123, 8, 40, 0.3);
     font-weight   : 600;
     font-style    : italic;
+    color         : white;
 }
