--- a/src/Components/Movies/css/media.module.css
+++ b/src/Components/Movies/css/media.module.css
@@ -1,14 +1,4 @@
-/* 
-.mediaContainer {
-    border             : 1px solid rgb(135, 140, 158);
-    margin-top         : 20px;
-    margin-left        : 10px;
-    margin-right       : 10px;
-    background-color   : rgb(180, 186, 210);
-    border-radius: 20px;
-    border       : 5px solid rgb(230, 230, 230);
-    box-shadow   : 0 70px 40px -20px rgba(0, 0, 0, 0.2);
-} */
+
 
 .mediaContainer {
     border       : 1px solid rgb(135, 140, 158);
@@ -61,4 +51,5 @@ p {
     font-weight   : 600;
     font-style    : italic;
     color         : white;
+    padding-bottom: 5px;
 }
