--- a/src/Components/Movies/css/media.module.css
+++ b/src/Components/Movies/css/media.module.css
@@ -1,5 +1,3 @@
-
-
 .mediaContainer {
     border       : 1px solid rgb(135, 140, 158);
     margin-top   : 20px;
@@ -8,8 +6,6 @@
     box-shadow   : 0px 5px 8px 3px rgb(0 0 0 / 55%);
     border-radius: 10px
 }
-
-
 
 .mediaDisplay {
     display              : grid;
@@ -40,6 +36,11 @@
 p {
     text-align  : center;
     padding-left: 6px;
+}
+
+.overview {
+    font-size     : 13px;
+    letter-spacing: 0.7px;
 }
 
 .rating {
