media query for grid container

--- a/src/Components/Movies/css/movies.module.css
+++ b/src/Components/Movies/css/movies.module.css
@@ -3,6 +3,11 @@
     margin: auto;
 }
 
+.gridContainer {
+    display      : grid;
+    justify-items: center;
+}
+
 
 .search {
     max-width: 97%;
@@ -51,10 +56,26 @@
     color           : rgb(55, 58, 71)
 }
 
-@media (min-width: 900px) {
+@media (min-width: 756px) {
     .gridContainer {
-        display              : grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    }
+}
 
+@media (min-width: 1200px) {
+    .gridContainer {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (min-width: 1600px) {
+    .gridContainer {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media (min-width: 2000px) {
+    .gridContainer {
+        grid-template-columns: repeat(5, 1fr);
     }
 }
